# SeaBattle2

./: .gitignore  CMakeLists.txt  levelData.json
copy_unit_test/TestLoggerObserver/: CMakeLists.txt  loggerObserver_test.cpp
src/: CMakeLists.txt  Cell.cpp  Cell.h  Constants.h  Controller.cpp  Controller.h  ControllerObserver.cpp  ControllerObserver.h  GameBoard.cpp  GameBoard.h  IInputController.h  ILogger.h  IObserver.h  IParser.h  ISubject.h  IView.h  InputConsoleController.cpp  InputConsoleController.h  LevelLoader.h  LoggerObserver.cpp  LoggerObserver.h  Model.cpp  Model.h  ModelSubject.cpp  ModelSubject.h  Observer.cpp  Observer.h  Parser.cpp  Parser.h  ParserJson.cpp  ParserJson.h  ParserTxt.cpp  ParserTxt.h  Ship.cpp  Ship.h  ShipsLogger.cpp  ShipsLogger.h  Subject.cpp  Subject.h  UtilityData.h  (+8 more)
unit-test/: CMakeLists.txt  parser_test.cpp  summer_test.cpp
unit-test/TestEmpty/: CMakeLists.txt  empty_test.cpp
unit-test/TestLoggerObserver/: CMakeLists.txt  loggerObserver_test.cpp
unit-test/TestParser/: CMakeLists.txt  parserTxt_test.cpp  parser_test.cpp
unit-test/TestSummer/: CMakeLists.txt  summer_test.cpp
unit-test/TestTurtle/: CMakeLists.txt  turtle_test.cpp
